# lines_scheduler

./: CustomRangeSlider.qml  HederButton.qml  README.md  WeekWidget.qml  database.cpp  database.h  main.cpp  main.qml  marsplan.pro  marsplan_ru_RU.ts  model.cpp  model.h  modelmediator.cpp  modelmediator.h  src.qrc
app/: CMakeLists.txt  main.cpp  main.qml  qmlApp_ru_RU.ts  qmltest_ru_RU.ts
core/: CMakeLists.txt
core/inc/: core.hpp  model.h
core/src/: core.cpp  model.cpp
core_fake/: CMakeLists.txt
core_fake/inc/: core_fake.hpp
core_fake/src/: core_fake.cpp
custom_style_components/: CMakeLists.txt  custom_components_res.qrc  qmldir
custom_style_components/CSC/: BigProgressBar.qml  CSCButton.qml  CustomRangeSlider.qml  HederButton.qml  LabelRightBorder.qml
custom_style_components/inc/: csc_export.h  csc_library.h  csc_plugin.h  csc_registrator.h
custom_style_components/src/: csc_library.cpp  csc_plugin.cpp  csc_registrator.cpp
integrity/: CMakeLists.txt  IntegrityDesignRes.qrc  IntegrityQmldir
integrity/inc/: integrity_export.h  integrity_library.h  integrity_plugin.h  integrity_registrator.h
integrity/qml/: IntegrityView.qml  WeekWidget.qml
integrity/src/: integrity_library.cpp  integrity_plugin.cpp  integrity_registrator.cpp
test/: CMakeLists.txt  qml.qrc  tst_qmltest.cpp
test/qml/: tst_tests.qml  tst_tests.qrc
